Changed the MQTT library to EspMQTTClient

--- a/platformio.ini
+++ b/platformio.ini
@@ -24,7 +24,8 @@ lib_deps_builtin =
 lib_deps_external =
     adafruit/Adafruit BME280 Library @ ^2.1.4
     ;knolleary/PubSubClient @ ^2.8
-    ottowinter/AsyncMqttClient-esphome @ ^0.8.5
+    ;ottowinter/AsyncMqttClient-esphome @ ^0.8.5
+    plapointe6/EspMQTTClient @ ^1.11.1
     bblanchon/ArduinoJson @ ^6.18.0
 
 
