Performed all changes for the new MQTT Library

--- a/platformio.ini
+++ b/platformio.ini
@@ -11,7 +11,7 @@
 
 
 [platformio]
-default_envs = ttgo-t-beam
+default_envs = development
 src_dir = src
 
 
@@ -23,6 +23,7 @@ lib_deps_builtin =
 
 lib_deps_external =
     adafruit/Adafruit BME280 Library @ ^2.1.4
+    adafruit/Adafruit BMP280 Library @ ^2.3.0
     ;knolleary/PubSubClient @ ^2.8
     ;ottowinter/AsyncMqttClient-esphome @ ^0.8.5
     plapointe6/EspMQTTClient @ ^1.11.1
@@ -31,7 +32,7 @@ lib_deps_external =
 
 
 
-[env:ttgo-t-beam]
+[env:WeatherStation_01]
 platform = espressif32
 board = ttgo-t-beam
 framework = arduino
@@ -40,6 +41,41 @@ framework = arduino
 ; Build options
 build_flags =
     ${common.build_flags}
+    -D TIME_TO_SLEEP=300
+    -D MAX_ONTIME=10000
+    -D BMP280
+    -D DEVICE_NAME=\"WeatherStation_9ae544a6\"
+    -D BROKER_IP=\"192.168.1.14\"
+    ;-D RTC_CLOCK
+
+; Library options
+lib_deps =
+    ${common.lib_deps_builtin}
+    ${common.lib_deps_external}
+
+    
+
+; Serial Monitor options
+monitor_speed = 115200
+
+
+
+
+[env:development]
+platform = espressif32
+board = esp32dev
+framework = arduino
+
+
+; Build options
+build_flags =
+    ${common.build_flags}
+    -D TIME_TO_SLEEP=60
+    -D MAX_ONTIME=10000
+    -D BME280
+    -D DEVICE_NAME=\"WeatherStation_9ae54469\"
+    -D BROKER_IP=\"192.168.1.14\"
+    ;-D RTC_CLOCK
 
 ; Library options
 lib_deps =
