Added notification for sensor errors

--- a/platformio.ini
+++ b/platformio.ini
@@ -46,6 +46,7 @@ build_flags =
     -D BMP280
     -D DEVICE_NAME=\"WeatherStation_9ae544a6\"
     -D BROKER_IP=\"192.168.1.14\"
+    ;-D DEBUGGING
     ;-D RTC_CLOCK
 
 ; Library options
@@ -75,6 +76,7 @@ build_flags =
     -D BME280
     -D DEVICE_NAME=\"WeatherStation_9ae54469\"
     -D BROKER_IP=\"192.168.1.14\"
+    -D DEBUGGING
     ;-D RTC_CLOCK
 
 ; Library options
