Bugfix in error handling

--- a/platformio.ini
+++ b/platformio.ini
@@ -11,7 +11,7 @@
 
 
 [platformio]
-default_envs = development
+default_envs = WeatherStation_01
 src_dir = src
 
 
@@ -41,8 +41,8 @@ framework = arduino
 ; Build options
 build_flags =
     ${common.build_flags}
-    -D TIME_TO_SLEEP=300
-    -D MAX_ONTIME=10000
+    -D TIME_TO_SLEEP=300 ;s
+    -D MAX_ONTIME=10000  ;ms
     -D BMP280
     -D DEVICE_NAME=\"WeatherStation_9ae544a6\"
     -D BROKER_IP=\"192.168.1.14\"
@@ -73,7 +73,7 @@ build_flags =
     ${common.build_flags}
     -D TIME_TO_SLEEP=60
     -D MAX_ONTIME=10000
-    -D BME280
+    -D BMP280
     -D DEVICE_NAME=\"WeatherStation_9ae54469\"
     -D BROKER_IP=\"192.168.1.14\"
     -D DEBUGGING
